--- a/mobile.html
+++ b/mobile.html
@@ -202,7 +202,7 @@ body{
 </video>
 
 <button id="toggleChat">
-  Click here to chat
+  Click here to chat 💬
 </button>
 
 <section class="chatbot" id="chatBot" hidden>
@@ -502,6 +502,7 @@ showOptions(["Start"]);
 
 </body>
 </html>
+
 
 
 
