--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@ body{
   flex-direction:column;
   overflow:hidden;
 }
-    .video-bg{
-      position:fixed;top:0;left:0;width:100%;
-      height:calc(var(--vh) * 100);
-      object-fit:cover;z-index:-1;
-    
+ .video-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
 
 /* CHAT HEADER */
@@ -502,6 +505,7 @@ showOptions(["Start"]);
 
 </body>
 </html>
+
 
 
 
